--- a/style.css
+++ b/style.css
@@ -269,54 +269,91 @@ body{
     background: linear-gradient(180deg, #03165B 0%, #3F5AB7 100%);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-.rainfall{
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    background-color: transparent;
-    position: relative;
-    top: 70px;
-    left: 80px;
 
+/* Common styles for all screen sizes 
+body {
+    padding: 0;
+    margin: 0;
+    background-color: #122F70;
 }
-.rain-per{
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    background-color: transparent;
+
+.button-1 {
+    width: 100px;
+    height: 100px;
     position: relative;
-    top: 80px;
-    left: 110px;  
+    top: 10px;
+    margin: 50px;
 }
-.this-year{
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    background-color: transparent;
+
+/* Add media query for screens with a maximum width of 1366px */
+@media only screen and (max-width: 1366px) { 
+body{
+    padding: 0;
+    margin: 0px;
+}
+.button-1 {
+        margin: 20px; 
+    }
+ .button-2 {
+        left: 120px;
+    }
+.button-3 {
+        left: 240px;
+    }
+
+.display {
+        padding: 0;
+        width: 1300px;
+    }
+.search-bar {
+        left: 850%; 
+    }
+.search-button{
+        position: relative;
+        width: 20px;
+        top: -35px;
+        left: 335px;
+        background:transparent;
+        border: none;
+    }
+img{
+    width: 30px;
+}
+.rectangle-4{
+   padding: 0;
+    width: 1300px;
+    height: 300px;
     position: relative;
-    top: -16px;
-    left: 450px;
-}
-.percentage{
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    background-color: transparent;
-    position: relative;
-    top: -10px;
-    left: 470px; 
-}
-.rectangle-6{
+    top: -230px;
     background-color: white;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     border-radius: 12px;
-    width: 702px;
-    height: 590px;
+}
+.wind-speed{
     position: relative;
-    top:-777px;
-    left: 730px;
-    flex-shrink: 0;
+    top: -480px;
+    left: 90px;
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+}
+.wind-img{
+    width: 40px;
+    position: relative;
+    top: -420px;
+    left: 30px;
+}
+.wind-value{
+    position: relative;
+    top: -485px;
+    left: 90px;
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 15px;
+    font-weight: bold; 
+}
+}
+
+/* Add media query for screens with a maximum width of 1024px */
+@media only screen and (max-width: 1024px) {
+    /* Adjust styles for even smaller screens if necessary */
 }
