--- a/style.css
+++ b/style.css
@@ -87,11 +87,22 @@ body{
     box-shadow:0px 4px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
 }
+.search-button{
+    background-color: transparent;
+    border: none;
+    position: absolute;
+    top: 5px;
+    left: 330px;
+}
 .search-icon{
+   background-color: transparent;
     position: relative;
     width: 26px;
     top: -33px;
     left: 345px;
+}
+img{
+    width: 30px;
 }
 .text-1{
     color: white;
@@ -150,6 +161,67 @@ body{
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     border-radius: 12px;
 }
+.vertical-line {
+    background: rgba(0, 0, 0, 0.12);
+    border-left: 2px solid; 
+    height: 250px;
+    width: 1px;
+    margin: 0 auto; 
+    position: relative;
+    top: -200px;
+  }
+.humidity-img{
+    width: 50px;
+    background-color: transparent;
+    position: relative;
+    top: -450px;
+    left: 20px;
+}
+.humidity{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: transparent;
+    position: relative;
+    top: -520px;
+    left: 90px;
+
+}
+.hum-per{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    background-color: transparent;
+    position: relative;
+    top: -540px;
+    left: 90px;
+
+}
+.wind-speed{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: transparent;
+    position: relative;
+    top: -480px;
+    left: 90px;
+}
+.wind-value{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    background-color: transparent;
+    position: relative;
+    top: -495px;
+    left: 90px;
+
+}
+.wind-img{
+    position: relative;
+    width: 35px ;
+    top: -420px;
+    left: 40px;
+}
 .sunset{
     font-family: 'Roboto Condensed',sans-serif;
     font-size: 20px;
@@ -199,161 +271,4 @@ body{
     position: relative;
     top: 40px;
     left: 522px;
-}
-.vertical-line {
-    background: rgba(0, 0, 0, 0.12);
-    border-left: 2px solid; 
-    height: 250px;
-    width: 1px;
-    margin: 0 auto; 
-    position: relative;
-    top: -200px;
-  }
-.humidity-img{
-    width: 50px;
-    background-color: transparent;
-    position: relative;
-    top: -450px;
-    left: 20px;
-}
-.humidity{
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    background-color: transparent;
-    position: relative;
-    top: -520px;
-    left: 90px;
-
-}
-.hum-per{
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    background-color: transparent;
-    position: relative;
-    top: -540px;
-    left: 90px;
-
-}
-.uv-index{
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    background-color: transparent;
-    position: relative;
-    top: -495px;
-    left: 90px;
-}
-.uv-per{
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    background-color: transparent;
-    position: relative;
-    top: -515px;
-    left: 90px;
-
-}
-.uv-image{
-    position: relative;
-    top: -430px;
-    left: 30px;
-}
-.rectangle-5{
-    width: 680px;
-    height: 230px;
-    position: relative;
-    top: -180px;
-    border-radius: 12px;
-    background: linear-gradient(180deg, #03165B 0%, #3F5AB7 100%);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-/* Common styles for all screen sizes 
-body {
-    padding: 0;
-    margin: 0;
-    background-color: #122F70;
-}
-
-.button-1 {
-    width: 100px;
-    height: 100px;
-    position: relative;
-    top: 10px;
-    margin: 50px;
-}
-
-/* Add media query for screens with a maximum width of 1366px */
-@media only screen and (max-width: 1366px) { 
-body{
-    padding: 0;
-    margin: 0px;
-}
-.button-1 {
-        margin: 20px; 
-    }
- .button-2 {
-        left: 120px;
-    }
-.button-3 {
-        left: 240px;
-    }
-
-.display {
-        padding: 0;
-        width: 1300px;
-    }
-.search-bar {
-        left: 850%; 
-    }
-.search-button{
-        position: relative;
-        width: 20px;
-        top: -35px;
-        left: 335px;
-        background:transparent;
-        border: none;
-    }
-img{
-    width: 30px;
-}
-.rectangle-4{
-   padding: 0;
-    width: 1300px;
-    height: 300px;
-    position: relative;
-    top: -230px;
-    background-color: white;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-    border-radius: 12px;
-}
-.wind-speed{
-    position: relative;
-    top: -480px;
-    left: 90px;
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-}
-.wind-img{
-    width: 40px;
-    position: relative;
-    top: -420px;
-    left: 30px;
-}
-.wind-value{
-    position: relative;
-    top: -485px;
-    left: 90px;
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 15px;
-    font-weight: bold; 
-}
-}
-
-/* Add media query for screens with a maximum width of 1024px */
-@media only screen and (max-width: 1024px) {
-    /* Adjust styles for even smaller screens if necessary */
 }
