--- a/style.css
+++ b/style.css
@@ -87,22 +87,28 @@ body{
     box-shadow:0px 4px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
 }
-.search-button{
-    background-color: transparent;
-    border: none;
-    position: absolute;
-    top: 5px;
-    left: 330px;
-}
 .search-icon{
-   background-color: transparent;
     position: relative;
     width: 26px;
     top: -33px;
     left: 345px;
 }
-img{
+.search-button{
+    background: transparent;
+    width: 40px;
+    border: none;
+    height: 40px;
+    position: absolute;
+    top: 0px;
+    left: 335px;
+    background:url(search-icon.png);
+    image-orientation:20px ;
+}
+.search-img{
     width: 30px;
+    position: absolute;
+    top: -4px;
+    left: 335px;
 }
 .text-1{
     color: white;
@@ -161,67 +167,6 @@ img{
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     border-radius: 12px;
 }
-.vertical-line {
-    background: rgba(0, 0, 0, 0.12);
-    border-left: 2px solid; 
-    height: 250px;
-    width: 1px;
-    margin: 0 auto; 
-    position: relative;
-    top: -200px;
-  }
-.humidity-img{
-    width: 50px;
-    background-color: transparent;
-    position: relative;
-    top: -450px;
-    left: 20px;
-}
-.humidity{
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    background-color: transparent;
-    position: relative;
-    top: -520px;
-    left: 90px;
-
-}
-.hum-per{
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    background-color: transparent;
-    position: relative;
-    top: -540px;
-    left: 90px;
-
-}
-.wind-speed{
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    background-color: transparent;
-    position: relative;
-    top: -480px;
-    left: 90px;
-}
-.wind-value{
-    font-family: 'Roboto Condensed',sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    background-color: transparent;
-    position: relative;
-    top: -495px;
-    left: 90px;
-
-}
-.wind-img{
-    position: relative;
-    width: 35px ;
-    top: -420px;
-    left: 40px;
-}
 .sunset{
     font-family: 'Roboto Condensed',sans-serif;
     font-size: 20px;
@@ -271,4 +216,146 @@ img{
     position: relative;
     top: 40px;
     left: 522px;
+}
+.vertical-line {
+    background: rgba(0, 0, 0, 0.12);
+    border-left: 2px solid; 
+    height: 250px;
+    width: 1px;
+    margin: 0 auto; 
+    position: relative;
+    top: -200px;
+  }
+.humidity-img{
+    width: 50px;
+    background-color: transparent;
+    position: relative;
+    top: -450px;
+    left: 20px;
+}
+.humidity{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: transparent;
+    position: relative;
+    top: -520px;
+    left: 90px;
+
+}
+.hum-per{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    background-color: transparent;
+    position: relative;
+    top: -540px;
+    left: 90px;
+
+}
+.uv-index{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: transparent;
+    position: relative;
+    top: -495px;
+    left: 90px;
+}
+.uv-per{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    background-color: transparent;
+    position: relative;
+    top: -515px;
+    left: 90px;
+
+}
+.uv-image{
+    position: relative;
+    top: -430px;
+    left: 30px;
+}
+.rectangle-5{
+    width: 680px;
+    height: 230px;
+    position: relative;
+    top: -180px;
+    border-radius: 12px;
+    background: linear-gradient(180deg, #03165B 0%, #3F5AB7 100%);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.rainfall{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    background-color: transparent;
+    position: relative;
+    top: 70px;
+    left: 80px;
+
+}
+.rain-per{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    background-color: transparent;
+    position: relative;
+    top: 80px;
+    left: 110px;  
+}
+.this-year{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    background-color: transparent;
+    position: relative;
+    top: -16px;
+    left: 450px;
+}
+.percentage{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    background-color: transparent;
+    position: relative;
+    top: -10px;
+    left: 470px; 
+}
+.rectangle-6{
+    background-color: white;
+    border-radius: 12px;
+    width: 702px;
+    height: 590px;
+    position: relative;
+    top:-777px;
+    left: 730px;
+    flex-shrink: 0;
+} 
+.wind-img{
+    width: 50px;
+    position: absolute;
+    top: 200px;
+    left: 20px;
+}
+.wind-speed{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
+    top: 185px;
+    left: 90px;
+}
+.wind-value{
+    font-family: 'Roboto Condensed',sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    position: absolute;
+    top: 215px;
+    left: 90px;
 }
