--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
 body{
-    padding: 0;
+    padding:0px;
     margin:0;
     overflow-x: hidden;
     background-color: #122F70;
 }
-*{
-    box-sizing: border-box;
-}
+
 
 .button-1{
     width: 100px;
@@ -70,6 +68,7 @@ body{
     background-repeat: no-repeat;
     position: relative;
     top: -250px;
+    left: -20px;
     border: black 1px;
     border-color: black;
     border-radius: 12px;
@@ -168,6 +167,7 @@ body{
     height: 300px;
     position: relative;
     top: -230px;
+    left: -20px;
     background-color: white;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     border-radius: 12px;
@@ -283,7 +283,291 @@ body{
 }
 @media (max-width: 1366px) {
     body {
-        font-size: 14px; 
-        overflow-x: hidden;
+        body{
+            padding: 0;
+            margin:0;
+            
+            background-color: #122F70;
+        }
+        *{
+            box-sizing: border-box;
+        }
+        
+        .button-1{
+            width: 100px;
+            height: 100px;
+            position:relative;
+            top: 10px;
+            margin: 50px;
+        }
+        .today{
+            background-color: white;
+            border: none;
+            border-radius: 22px;
+            width: 87px;
+            height: 38px;
+            color: darkblue;
+            font-family: Roboto;
+            font-weight:600;
+            font-size: 20px;
+        }
+        .button-2{
+            width: 100px;
+            height: 100px;
+            position: relative;
+            top: -37px;
+            left: 110px;
+        }
+        .tomorrow{
+            background-color: transparent;
+            border: none;
+            width: 87px;
+            height: 38px;
+            color: white;
+            font-family: Roboto;
+            opacity: 100%;
+            font-weight:600;
+            font-size: 20px;
+        }
+        .button-3{
+            width: 100px;
+            height: 100px;
+            position: relative;
+            top: -137px;
+            left: 230px;
+        }
+        .tendays{
+            background-color: transparent;
+            border: none;
+            width: 87px;
+            height: 38px;
+            color: white;
+            font-family: Roboto;
+            opacity: 100%;
+            font-weight:600;
+            font-size: 20px;
+        }
+        .display{
+            width: 1300px;
+            height: 500px;
+            background-image: url(Display\ img.jpg);
+            background-size:100%     ;
+            background-repeat: no-repeat;
+            position: relative;
+            top: -250px;
+            border: black 1px;
+            border-color: black;
+            border-radius: 12px;
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+        
+        }
+        
+        .search-bar{
+            width: 100px;
+            height: 100px;
+            position: relative;
+            top: -230px;
+            left: 920px;
+        }
+        .search{
+            height: 40px;
+            width: 383.3px;
+            border-radius: 10px;
+            border-style: none;
+            box-shadow:0px 4px 8px rgba(0, 0, 0, 0.2);
+            padding: 20px;
+        }
+        .search-icon{
+            position: relative;
+            width: 26px;
+            top: -33px;
+            left: 345px;
+        }
+        .search-button{
+            background: transparent;
+            width: 40px;
+            border:none ;
+            height: 40px;
+            position: absolute;
+            top: 0px;
+            left: 335px;
+            background:url(search-icon.png);
+            background-size: contain;;
+        }
+        .search-img{
+            width: 30px;
+            position: absolute;
+            top: -4px;
+            left: 335px;
+        }
+        .text-1{
+            color: white;
+            position: relative;
+            top: 460px;
+            left: 15px;
+            border-style: none;
+            font-family: Inter;
+            font-weight: 600;
+            font-size: 22px;
+        }
+        .celsius{
+            position: relative;
+            top: 290px;
+            left: 8px;
+            color: white;
+            font-family:  'Barlow Condensed';
+            font-weight: 400;
+            font-size: 70px;
+            height: 114px;
+        }
+        .weather-image{
+            position: relative;
+            top: 80px;
+            left: 15px;
+            border-style: none;
+        
+        }
+        .day{
+            color: white;
+            position: relative;
+            top: 125px;
+            text-align: right;
+            right: 35px;
+            border-style: none;
+            font-family: Inter;
+            font-weight: 600;
+            font-size: 22px;
+        }
+        .time{
+            color: white;
+            position: relative;
+            top: 25px;
+            text-align: right;
+            right: 35px;
+            border-style: none;
+            font-family: 'Roboto Condensed', sans-serif;
+            font-size: 32px;
+        }
+        .rectangle-4{
+            width: 1340px;
+            height: 300px;
+            position: relative;
+            top: -230px;
+            background-color: white;
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+            border-radius: 12px;
+        }
+        .sunset{
+            font-family: 'Roboto Condensed',sans-serif;
+            font-size: 20px;
+            font-weight: bold;
+            background-color: transparent;
+            position: relative;
+            top: 46px;
+            left: 920px;
+        }
+        .time-2{
+            font-family: 'Roboto Condensed',sans-serif;
+            font-size: 16px;
+            font-weight: 600;
+            background-color: transparent;
+            position: relative;
+            top: 30px;
+            left: 922px;
+        }
+        .sunset-img{
+            width: 50px;
+            background-color: transparent;
+            position: relative;
+            top: -37px;
+            left: 850px;
+        }
+        .sunrise-img{
+            width: 50px;
+            background-color: transparent;
+            position: relative;
+            top: 120px;
+            left: 800px;
+        }
+        .sunrise{
+            font-family: 'Roboto Condensed',sans-serif;
+            font-size: 20px;
+            font-weight: bold;
+            background-color: transparent;
+            position: relative;
+            top: 60px;
+            left: 920px;
+        }
+        .time-3{
+            font-family: 'Roboto Condensed',sans-serif;
+            font-size: 16px;
+            font-weight: 600;
+            background-color: transparent;
+            position: relative;
+            top: 40px;
+            left: 922px;
+        }
+        .vertical-line {
+            background: rgba(0, 0, 0, 0.12);
+            border-left: 2px solid; 
+            height: 255px;
+            width: 1px;
+            margin: 0 auto; 
+            position: relative;
+            top: -210px;
+            left: -60px;
+          }
+        .humidity-img{
+            width: 50px;
+            background-color: transparent;
+            position: relative;
+            top: -450px;
+            left: 220px;
+        }
+        .humidity{
+            font-family: 'Roboto Condensed',sans-serif;
+            font-size: 20px;
+            font-weight: bold;
+            background-color: transparent;
+            position: relative;
+            top: -520px;
+            left: 290px;
+        
+        }
+        .hum-per{
+            font-family: 'Roboto Condensed',sans-serif;
+            font-size: 15px;
+            font-weight: bold;
+            background-color: transparent;
+            position: relative;
+            top: -540px;
+            left: 290px;
+        
+        }
+        .wind-img{
+            width: 50px;
+            position: absolute;
+            top: 200px;
+            left: 220px;
+        }
+        .wind-speed{
+            font-family: 'Roboto Condensed',sans-serif;
+            font-size: 20px;
+            font-weight: bold;
+            position: absolute;
+            top: 185px;
+            left: 290px;
+        }
+        .wind-value{
+            font-family: 'Roboto Condensed',sans-serif;
+            font-size: 15px;
+            font-weight: bold;
+            position: absolute;
+            top: 215px;
+            left: 290px;
+        }
+        
+        }
+        
     }
-}
+
