--- a/style.css
+++ b/style.css
@@ -282,8 +282,7 @@ body{
     left: 290px;
 }
         
-    @media screen and  (max-width: 480px){
-
+@media screen and (max-width: 360px) and (max-height: 640px) {
 body{
     padding:0px ;
     margin: 0px;
